--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "workspaces": [
     "packages/*",
-    "playground"
+    "playground/*"
   ],
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
     "turbo": "^1.13.0"
   },
   "scripts": {
