--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc && vite build --minify=false",
     "preview": "vite preview",
     "test:unit": "vitest",
     "build-only": "vite build",
@@ -51,8 +51,24 @@
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
-    "vite-plugin-vue-devtools": "^7.0.25",
+    "vite-plugin-dts": "^3.9.0",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.11"
-  }
+  },
+  "peerDependencies": {
+    "tailwindcss": "^3.4.3",
+    "vue": "^3.0.0"
+  },
+  "main": "./dist/ui-library.umd.js",
+  "module": "./dist/ui-library.es.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "vue",
+    "vue3",
+    "component",
+    "library"
+  ]
 }
