--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev": "yarn turbo run dev",
     "build": "yarn turbo run build",
     "test": "yarn turbo run test",
-    "storybook": "yarn turbo run storybook"
+    "storybook": "yarn turbo run storybook",
+    "build-storybook": "yarn turbo run build && build-storybook"
   }
 }
