update build command

--- a/turbo.json
+++ b/turbo.json
@@ -10,6 +10,9 @@
     },
     "dev": {},
     "storybook": {},
+    "build-storybook": {
+      "dependsOn": ["^build"]
+    },
     "build": {
       "dependsOn": ["^build"]
     },
