--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "packageManager": "yarn@4.0.2",
   "private": true,
   "workspaces": [
-    "packages/*",
-    "playground/*"
+    "packages/*"
   ],
   "devDependencies": {
     "prettier": "^3.2.5",
