--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -37,6 +37,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@testing-library/vue": "^8.0.3",
     "@tsconfig/node20": "^20.1.4",
+    "@types/jest-axe": "^3.5.9",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
@@ -48,6 +49,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.23.0",
+    "jest-axe": "^8.0.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
